Cm with complete I18N (FR done)

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -264,10 +264,10 @@ tePage.status = Was tumoral evaluation perfomed?
 tePage.visitNd = Please specify the reason why tumoral evaluation is not done
 tePage.visitNd.placeholder = Please specify the reason why tumoral evaluation is not done
 tePage.visitDate = Date of assessment
-tePage.target.lesion = Target lesions
-tePage.non.target.lesion = Non target lesions
-tePage.new.lesion.status = New lesion
-tePage.overall.response = Overall response
+tePage.target.lesion = Target Lesions
+tePage.non.target.lesion = Non Target Lesions
+tePage.new.lesion.status = New Lesion
+tePage.overall.response = Overall Response
 application.create.te = Create a form Tumoral evaluation
 
 /*--AE--*/
@@ -320,3 +320,15 @@ cmPage.cmindicsp.errorMessage =  Please specify the Other reason or correct the 
 cmPage.input_cmdose = Dose
 cmPage.input_cmdose.placeholder = Please specify the Dose
 cmPage.input_cmdose.errorMessage = Dose is mandatory
+cmPage.cmdosu = Unit
+cmPage.cmdosusp = If Other unit, specify
+cmPage.cmdosusp.placeHolder = Please specify
+cmPage.cmdosusp.errorMessage = Please specify the Other unit or correct the previous answer
+cmPage.cmroute = Route
+cmPage.cmroutesp = If Other route, specify
+cmPage.cmroutesp.placeHolder = Please specify
+cmPage.cmroutesp.errorMessage = Please specify the Other route or correct the previous answer
+cmPage.cmfreq = Frequency
+cmPage.cmfreqsp = If Other frequency, specify
+cmPage.cmfreqsp.placeHolder = Please specify
+cmPage.cmfreqsp.errorMessage = Please specify the Other frequency or correct the previous answer
