--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -170,8 +170,8 @@ formPage.formLabel = Nom du formulaire
 /*---DOV---*/
 dovPage.addDovTitle = Créer un formulaire Date de visite
 dovPage.status = La visite de screening a-t'-elle été réalisée?
-done = Réalisé
-notDone = Non réalisé
+done = Réalisé(e)
+notDone = Non réalisé(e)
 dovPage.visitNd = Veuillez spécifier la  raison pour laquelle la visite n'a pas été réalisée 
 dovPage.visitNd.placeholder = Veuillez spécifier la  raison pour laquelle la visite n'a pas été réalisée
 messageErrorVisitNd = Ce champ ne peut être rempli que si la visite n'a pas été réalisée
@@ -190,13 +190,13 @@ icPage.protocoleVersion.placeholder = Doit contenir la version du protocole
 icPage.protocoleVersion.errorMessage = Ce champ est obligatoire
 icPage.status = Éligibilité du sujet 
 eligible = Éligible
-notEligible = Pas éligible
+notEligible = Non éligible
 messageErrorIeNotMeet = Le sujet est rapporté comme éligible mais un critère non respecté a été selectionné
 messageErrorIeNotMeetNa = Le sujet est rapport comme non éligible mais un critère n'a pas été sélectionné
 icPage.ie_not_met = Critère non respecté
 
 /*---DM---*/
-dmPage.addDmTitle = Créer un formulaire Demographie
+dmPage.addDmTitle = Créer un formulaire Démographie
 dmPage.year = Année de naissance 
 dmPage.year.placeholder = Doit être 1920 et 2005
 dmPage.year.errorMessage = L'année de naissance doit être entre 1920 et 2005
@@ -212,39 +212,39 @@ vsPage.vsNd.placeholder = Veuillez spécifier la  raison pour laquelle les signes
 vsPage.vsDate = Date de l'évaluation
 vsPage.heightNd = Mesure de la taille
 vsPage.height = Taille
-vsPage.height.placeholder =
-vsPage.height.errorMessage =
+vsPage.height.placeholder = Veuillez spécifier la Taille
+vsPage.height.errorMessage = Veuillez spécifier la Taille ou confirmer cette mesure comme non réalisée
 vsPage.height.unit = Unité de taille
 vsPage.weightNd = Mesure du poids
 vsPage.weight = Poids
-vsPage.weight.placeholder =
-vsPage.weight.errorMessage =
+vsPage.weight.placeholder = Veuillez spécifier le Poids
+vsPage.weight.errorMessage = Veuillez spécifier le Poids ou confirmer cette mesure comme non réalisée
 vsPage.weight.unit = Unité de poids
 vsPage.bpNd = Mesure de la pression sanguine
 vsPage.input_sbp = Pression sanguine systolique
-vsPage.input_sbp.placeholder =
-vsPage.input_sbp.errorMessage =
+vsPage.input_sbp.placeholder = Veuillez spécifier la Pression sanguine systolique
+vsPage.input_sbp.errorMessage = Veuillez spécifier la Pression sanguine systolique ou confirmer cette mesure comme non réalisée
 vsPage.input_dbp = Pression sanguine diastolique
-vsPage.input_dbp.placeholder =
-vsPage.input_dbp.errorMessage =
+vsPage.input_dbp.placeholder = Veuillez spécifier la Pression sanguine diastolique
+vsPage.input_dbp.errorMessage = Veuillez spécifier la Pression sanguine diastolique ou confirmer cette mesure comme non réalisée
 vsPage.hrNd = Mesure de la fréquence cardiaque
 vsPage.input_hr = Fréquence cardiaque
-vsPage.input_hr.placeholder =
-vsPage.input_hr.errorMessage =
+vsPage.input_hr.placeholder = Veuillez spécifier la Fréquence cardiaque
+vsPage.input_hr.errorMessage = Veuillez spécifier la Fréquence cardiaque ou confirmer cette mesure comme non réalisée
 vsPage.rrNd = Mesure de la fréquence respiratoire
 vsPage.input_rr = Fréquence respiratoire
-vsPage.input_rr.placeholder =
-vsPage.input_rr.errorMessage =
+vsPage.input_rr.placeholder = Veuillez spécifier la Fréquence respiratoire
+vsPage.input_rr.errorMessage = Veuillez spécifier la Fréquence respiratoire ou confirmer cette mesure comme non réalisée
 vsPage.tempNd = Mesure de la température
 vsPage.input_temp = Température
-vsPage.input_temp.placeholder =
-vsPage.input_temp.errorMessage =
+vsPage.input_temp.placeholder = Veuillez spécifier la Température
+vsPage.input_temp.errorMessage = Veuillez spécifier la Température ou confirmer cette mesure comme non réalisée
 vsPage.tempU = Unité de température
 vsPage.tempRoute = Voie de mesure de la température
 vsPage.oxyNd = Mesure de la saturation en oxygène
 vsPage.input_oxy = Saturation en oxygène
-vsPage.input_oxy.placeholder =
-vsPage.input_oxy.errorMessage =
+vsPage.input_oxy.placeholder = Veuillez spécifier la Saturation en oxygène
+vsPage.input_oxy.errorMessage = Veuillez spécifier la Saturation en oxygène ou confirmer cette mesure comme non réalisée
 messageErrorHeightCm =
 messageErrorHeightInches =
 messageErrorWeightKg =
@@ -264,10 +264,10 @@ tePage.status = L'évaluation tumorale a-t'-elle été réalisée?
 tePage.visitNd = Veuillez spécifier la  raison pour laquelle l'évaluation tumorale n'a pas été réalisée
 tePage.visitNd.placeholder = Veuillez spécifier la  raison pour laquelle l'évaluation tumorale n'a pas été réalisée
 tePage.visitDate = Date de l'évaluation
-tePage.target.lesion = Lésions cibles
-tePage.non.target.lesion = Lésions non cibles
-tePage.new.lesion.status = Nouvelle lésion
-tePage.overall.response = Réponse globale
+tePage.target.lesion = Lésions Cibles
+tePage.non.target.lesion = Lésions Non Cibles
+tePage.new.lesion.status = Nouvelle Lésion
+tePage.overall.response = Réponse Globale
 application.create.te = Créer un formulaire d'Evaluation tumorale
 
 /*--AE--*/
@@ -284,21 +284,51 @@ aePage.aetoxgd = Toxicité
 aePage.aesev = Severité
 aePage.aerel = Relation avec le traitement de l'étude
 aePage.aeacn = Action prise avec le traitement de l'étude
-aePage.aecm = Est-ce qu?un traitement additionnel a été donné suite à cette évènement indésirable
-aePage.aeproc = Est-ce qu?une procédure / traitement non médicamenteux à été donné suite à cette évènement indésirable
+aePage.aecm = Est-ce qu'un traitement additionnel a été donné suite à cette évènement indésirable
+aePage.aeproc = Est-ce qu'une procédure / traitement non médicamenteux à été donné suite à cette évènement indésirable
 aePage.aeother = Action autre prise suite à cette évènement indésirable
 aePage.aeothersp = Action autre prise, specifier
 aePage.aeothersp.placeHolder = Veuillez spécifier
-aePage.aeothersp.errorMessage = Veuillez spécifier l'action autre ou corriger votre réponse précédente
-aePage.aeser = Est-ce que l?évènement indésirable est considéré comme sérieux ?
+aePage.aeothersp.errorMessage = Veuillez spécifier l'action autre ou corriger la réponse précédente
+aePage.aeser = Est-ce que l'évènement indésirable est considéré comme sérieux ?
 yes = Oui
 no = Non
 aePage.aedeath = A entraîné la mort
 aePage.aelife = A engagé le pronostic vital
-aePage.aehosp = A entraîné l?hospitalisation ou la prolongation d?une l?hospitalisation existante
+aePage.aehosp = A entraîné l'hospitalisation ou la prolongation d'une l'hospitalisation existante
 aePage.aedisab = A résulté une invalidité / incapacité persistante ou significative
 aePage.aecong = A entraîné une anomalie congénitale
 aePage.aemedim = Est considéré par le médecin investigateur comme étant médicalement important
 aePage.aemedimsp = Medicalement important, spécifier
 aePage.aemedimsp.placeHolder = Veuillez spécifier
 aePage.aemedimsp.errorMessage = Veuillez spécifier la raison pour laquelle l'évènement est medicalement important ou corriger la réponse précédente
+
+/*--CM--*/
+cmPage.addCmTitle = Créer un formulaire de Traitement concomitant
+cmPage.cmterm = Nom du traitement
+cmPage.cmterm.placeHolder = Veuillez spécifier le Nom du traitement
+cmPage.cmterm.errorMessage = le Nom du traitement est obligatoire
+cmPage.cmtermc = Terme préféré - CM
+cmPage.cmtermc.placeHolder = Veuillez spécifier le Terme préféré - CM
+cmPage.cmstdat = Date de début
+cmPage.cmong = En cours
+cmPage.cmendat = Date de fin
+cmPage.cmindic = Indication du traitement
+cmPage.cmindicsp = Si Indication autre, specifier
+cmPage.cmindicsp.placeHolder = Veuillez spécifier
+cmPage.cmindicsp.errorMessage =  Veuillez spécifier l'Indication autre ou corriger la réponse précédente
+cmPage.input_cmdose = Dose
+cmPage.input_cmdose.placeholder = Veuillez spécifier la Dose
+cmPage.input_cmdose.errorMessage = La Dose est obligatoire
+cmPage.cmdosu = Unité
+cmPage.cmdosusp = Si Unité autre, specifier
+cmPage.cmdosusp.placeHolder = Veuillez spécifier
+cmPage.cmdosusp.errorMessage = Veuillez spécifier l'Unité autre ou corriger la réponse précédente
+cmPage.cmroute = Voie d'administration
+cmPage.cmroutesp = Si Voie d'administration autre, specifier
+cmPage.cmroutesp.placeHolder = Veuillez spécifier
+cmPage.cmroutesp.errorMessage = Veuillez spécifier la Voie d'administration autre ou corriger la réponse précédente
+cmPage.cmfreq = Fréquence
+cmPage.cmfreqsp = Si Fréquence autre, specifier
+cmPage.cmfreqsp.placeHolder = Veuillez spécifier
+cmPage.cmfreqsp.errorMessage = Veuillez spécifier la Fréquence autre ou corriger la réponse précédente
