MAJ 05/09 update DOV OK et list of events OK

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -269,6 +269,12 @@ tePage.non.target.lesion = Non Target Lesions
 tePage.new.lesion.status = New Lesion
 tePage.overall.response = Overall Response
 application.create.te = Create a form Tumoral evaluation
+messageErrorCR =
+messageErrorPR =
+messageErrorSD =
+messageErrorPD =
+messageErrorNAE =
+messageErrorNE =
 
 /*--AE--*/
 aePage.addAeTitle = Create a form Adverse event
@@ -307,7 +313,6 @@ messageErrorAeendatPres =
 messageErrorAeendatMis =
 messageErrorAeotherspMis =
 
-
 /*--CM--*/
 cmPage.addCmTitle = Create a form Concomitant medication
 cmPage.cmterm = Medication name
@@ -337,3 +342,21 @@ cmPage.cmfreq = Frequency
 cmPage.cmfreqsp = If Other frequency, specify
 cmPage.cmfreqsp.placeHolder = Please specify
 cmPage.cmfreqsp.errorMessage = Please specify the Other frequency or correct the previous answer
+
+/*---ListOfEvents---*/
+eventsPage.ListOfEvents =
+dov.modify =
+ic.modify =
+dm.modify =
+vs.modify =
+te.modify =
+ae.modify =
+cm.modify =
+dov.consult =
+ic.consult =
+dm.consult =
+vs.consult =
+te.consult =
+ae.consult =
+cm.consult =
+event.inactive =
