--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -269,6 +269,12 @@ tePage.non.target.lesion = Lésions Non Cibles
 tePage.new.lesion.status = Nouvelle Lésion
 tePage.overall.response = Réponse Globale
 application.create.te = Créer un formulaire d'Evaluation tumorale
+messageErrorCR =
+messageErrorPR =
+messageErrorSD =
+messageErrorPD =
+messageErrorNAE =
+messageErrorNE =
 
 /*--AE--*/
 aePage.addAeTitle = Créer un formulaire d'Evènement indésirable
@@ -301,7 +307,11 @@ aePage.aecong = A entraîné une anomalie congénitale
 aePage.aemedim = Est considéré par le médecin investigateur comme étant médicalement important
 aePage.aemedimsp = Medicalement important, spécifier
 aePage.aemedimsp.placeHolder = Veuillez spécifier
-aePage.aemedimsp.errorMessage = Veuillez spécifier la raison pour laquelle l'évènement est medicalement important ou corriger la réponse précédente
+aePage.aemedimsp.errorMessage = Veuillez spécifier la raison pour laquelle l'évènement est médicalement important ou corriger la réponse précédente
+messageErrorAeendatBeforAestdat =
+messageErrorAeendatPres =
+messageErrorAeendatMis =
+messageErrorAeotherspMis =
 
 /*--CM--*/
 cmPage.addCmTitle = Créer un formulaire de Traitement concomitant
@@ -332,3 +342,21 @@ cmPage.cmfreq = Fréquence
 cmPage.cmfreqsp = Si Fréquence autre, specifier
 cmPage.cmfreqsp.placeHolder = Veuillez spécifier
 cmPage.cmfreqsp.errorMessage = Veuillez spécifier la Fréquence autre ou corriger la réponse précédente
+
+/*---ListOfEvents---*/
+eventsPage.ListOfEvents =
+dov.modify =
+ic.modify =
+dm.modify =
+vs.modify =
+te.modify =
+ae.modify =
+cm.modify =
+dov.consult =
+ic.consult =
+dm.consult =
+vs.consult =
+te.consult =
+ae.consult =
+cm.consult =
+event.inactive =
