MAJ 05/09 update DOV OK et list of events OK

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -180,6 +180,7 @@ messageErrorVisitDateMissing = The date must be entered if the visit is performe
 dovPage.visitDate = Date of visit 
 messageErrorVisitDate = The date of visit cannot be in the future
 application.create.dov = Create a form Date of visit
+application.update.dov =
 
 /*---IC---*/
 icPage.addIcTitle = Create a form Informed consent
@@ -312,6 +313,11 @@ messageErrorAeendatBeforAestdat =
 messageErrorAeendatPres =
 messageErrorAeendatMis =
 messageErrorAeotherspMis =
+messageErrorAemedimspMis =
+messageErrorVisitDateAeOut =
+messageErrorAeterm =
+messageErrorVisitDateAeendat =
+messageErrorAaeser =
 
 /*--CM--*/
 cmPage.addCmTitle = Create a form Concomitant medication
