--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -180,6 +180,7 @@ messageErrorVisitDateMissing = La date de visite est obligatoire si celle-ci a é
 dovPage.visitDate = Date de visite 
 messageErrorVisitDate = La date de visite ne peut pas être dans le futur
 application.create.dov = Créer un formulaire Date de visite
+application.update.dov =
 
 /*---IC---*/
 icPage.addIcTitle = Créer un formulaire de Consentement éclairé
@@ -312,6 +313,11 @@ messageErrorAeendatBeforAestdat =
 messageErrorAeendatPres =
 messageErrorAeendatMis =
 messageErrorAeotherspMis =
+messageErrorAemedimspMis =
+messageErrorVisitDateAeOut =
+messageErrorAeterm =
+messageErrorVisitDateAeendat =
+messageErrorAaeser =
 
 /*--CM--*/
 cmPage.addCmTitle = Créer un formulaire de Traitement concomitant
