Cm with complete I18N (FR done)

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -246,22 +246,22 @@ vsPage.oxyNd = Oxygen saturation assessment
 vsPage.input_oxy = Oxygen saturation
 vsPage.input_oxy.placeholder = Please specify Oxygen saturation value
 vsPage.input_oxy.errorMessage = Please specify Oxygen saturation or report this assessment as not done
-messageErrorHeightCm =
-messageErrorHeightInches =
-messageErrorWeightKg =
-messageErrorWeightPounds =
-messageErrorSbpGtDbp =
-messageErrorSbp =
-messageErrorDbp =
-messageErrorHr =
-messageErrorRr =
-messageErrorTempC =
-messageErrorTempF =
-messageErrorOxy =
+messageErrorHeightCm = Height is not in the expected range with the selected unit
+messageErrorHeightInches = Height is not in the expected range with the selected unit
+messageErrorWeightKg = Weight is not in the expected range with the selected unit
+messageErrorWeightPounds = Weight is not in the expected range with the selected unit
+messageErrorSbpGtDbp = Systolic Blood Pressure can not be lower than Diastolic Blood Pressure
+messageErrorSbp = Systolic Blood Pressure is not in the expected range
+messageErrorDbp = Diastolic Blood Pressure is not in the expected range
+messageErrorHr = Heart Rate is not in the expected range, please correct
+messageErrorRr = Temperature is not in the expected range, please correct
+messageErrorTempC = Temperature is not in the expected range with the selected unit
+messageErrorTempF = Temperature is not in the expected range with the selected unit
+messageErrorOxy = Oxygen Saturation Temperature is not in the expected range
 
 /*---TE---*/
 tePage.addTeTitle = Create a form Tumoral evaluation
-tePage.status = Was tumoral evaluation perfomed?
+tePage.status = Was tumoral evaluation performed?
 tePage.visitNd = Please specify the reason why tumoral evaluation is not done
 tePage.visitNd.placeholder = Please specify the reason why tumoral evaluation is not done
 tePage.visitDate = Date of assessment
@@ -270,12 +270,12 @@ tePage.non.target.lesion = Non Target Lesions
 tePage.new.lesion.status = New Lesion
 tePage.overall.response = Overall Response
 application.create.te = Create a form Tumoral evaluation
-messageErrorCR =
-messageErrorPR =
-messageErrorSD =
-messageErrorPD =
-messageErrorNAE =
-messageErrorNE =
+messageErrorCR = This Overall Response does not match with previous evaluation results
+messageErrorPR = This Overall Response does not match with previous evaluation results
+messageErrorSD = This Overall Response does not match with previous evaluation results
+messageErrorPD = This Overall Response does not match with previous evaluation results
+messageErrorNAE = This Overall Response does not match with previous evaluation results
+messageErrorNE = This Overall Response does not match with previous evaluation results
 
 /*--AE--*/
 aePage.addAeTitle = Create a form Adverse event
@@ -309,7 +309,7 @@ aePage.aemedim = Important medical event
 aePage.aemedimsp = Important medical event, specify
 aePage.aemedimsp.placeHolder = Please specify
 aePage.aemedimsp.errorMessage = Please specify the reason why this is an Important medical event or correct the previous answer
-messageErrorAeendatBeforAestdat =
+messageErrorAeendatBeforAestdat = End Date reported is before Start Date, please correct
 messageErrorAeendatPres =
 messageErrorAeendatMis =
 messageErrorAeotherspMis =
