--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -246,18 +246,18 @@ vsPage.oxyNd = Mesure de la saturation en oxygène
 vsPage.input_oxy = Saturation en oxygène
 vsPage.input_oxy.placeholder = Veuillez spécifier la Saturation en oxygène
 vsPage.input_oxy.errorMessage = Veuillez spécifier la Saturation en oxygène ou confirmer cette mesure comme non réalisée
-messageErrorHeightCm =
-messageErrorHeightInches =
-messageErrorWeightKg =
-messageErrorWeightPounds =
-messageErrorSbpGtDbp =
-messageErrorSbp =
-messageErrorDbp =
-messageErrorHr =
-messageErrorRr =
-messageErrorTempC =
-messageErrorTempF =
-messageErrorOxy =
+messageErrorHeightCm = La taille n'est pas dans la gamme de valeurs attendues pour l'unité sélectionnée
+messageErrorHeightInches = La taille n'est pas dans la gamme de valeurs attendues pour l'unité sélectionnée
+messageErrorWeightKg = Le poids n'est pas dans la gamme de valeurs attendues pour l'unité sélectionnée
+messageErrorWeightPounds = Le poids n'est pas dans la gamme de valeurs attendues pour l'unité sélectionnée
+messageErrorSbpGtDbp = La Pression systolique ne peut pas être inférieure à la Pression diastolique
+messageErrorSbp = La Pression systolique n'est pas dans la gamme de valeurs attendues
+messageErrorDbp = La Pression diastolique n'est pas dans la gamme de valeurs attendues
+messageErrorHr = La Fréquence cardiaque n'est pas dans la gamme de valeurs attendues
+messageErrorRr = La Fréquence respiratoire n'est pas dans la gamme de valeurs attendues
+messageErrorTempC = La Température n'est pas dans la gamme de valeurs attendues pour l'unité sélectionnée
+messageErrorTempF = La Température n'est pas dans la gamme de valeurs attendues pour l'unité sélectionnée
+messageErrorOxy = La Saturation en oxygène n'est pas dans la gamme de valeurs attendues
 
 /*---TE---*/
 tePage.addTeTitle = Créer un formulaire d'Evaluation tumorale
@@ -270,31 +270,31 @@ tePage.non.target.lesion = Lésions Non Cibles
 tePage.new.lesion.status = Nouvelle Lésion
 tePage.overall.response = Réponse Globale
 application.create.te = Créer un formulaire d'Evaluation tumorale
-messageErrorCR =
-messageErrorPR =
-messageErrorSD =
-messageErrorPD =
-messageErrorNAE =
-messageErrorNE =
+messageErrorCR = La Réponse Globale ne coïncide pas avec les résultats de l'évaluation précédents
+messageErrorPR = La Réponse Globale ne coïncide pas avec les résultats de l'évaluation précédents
+messageErrorSD = La Réponse Globale ne coïncide pas avec les résultats de l'évaluation précédents
+messageErrorPD = La Réponse Globale ne coïncide pas avec les résultats de l'évaluation précédents
+messageErrorNAE = La Réponse Globale ne coïncide pas avec les résultats de l'évaluation précédents
+messageErrorNE = La Réponse Globale ne coïncide pas avec les résultats de l'évaluation précédents
 
 /*--AE--*/
 aePage.addAeTitle = Créer un formulaire d'Evènement indésirable
 aePage.aeterm = Description de l'EI
-aePage.aeterm.placeHolder = Veuillez specifier la description de l'EI
+aePage.aeterm.placeHolder = Veuillez spécifier la description de l'EI
 aePage.aeterm.errorMessage = La description de l'EI est obligatoire
 aePage.aetermc = Terme préféré EI
-aePage.aetermc.placeHolder = Veuillez specifier le Terme préféré EI
+aePage.aetermc.placeHolder = Veuillez spécifier le Terme préféré EI
 aePage.aestdat = Date de début
 aePage.aeout = Issue de l'évènement
 aePage.aeendat = Date de fin
 aePage.aetoxgd = Toxicité
-aePage.aesev = Severité
+aePage.aesev = Sévérité
 aePage.aerel = Relation avec le traitement de l'étude
 aePage.aeacn = Action prise avec le traitement de l'étude
 aePage.aecm = Est-ce qu'un traitement additionnel a été donné suite à cette évènement indésirable
 aePage.aeproc = Est-ce qu'une procédure / traitement non médicamenteux à été donné suite à cette évènement indésirable
 aePage.aeother = Action autre prise suite à cette évènement indésirable
-aePage.aeothersp = Action autre prise, specifier
+aePage.aeothersp = Action autre prise, spécifier
 aePage.aeothersp.placeHolder = Veuillez spécifier
 aePage.aeothersp.errorMessage = Veuillez spécifier l'action autre ou corriger la réponse précédente
 aePage.aeser = Est-ce que l'évènement indésirable est considéré comme sérieux ?
@@ -337,7 +337,7 @@ cmPage.input_cmdose = Dose
 cmPage.input_cmdose.placeholder = Veuillez spécifier la Dose
 cmPage.input_cmdose.errorMessage = La Dose est obligatoire
 cmPage.cmdosu = Unité
-cmPage.cmdosusp = Si Unité autre, specifier
+cmPage.cmdosusp = Si Unité autre, spécifier
 cmPage.cmdosusp.placeHolder = Veuillez spécifier
 cmPage.cmdosusp.errorMessage = Veuillez spécifier l'Unité autre ou corriger la réponse précédente
 cmPage.cmroute = Voie d'administration
@@ -345,7 +345,7 @@ cmPage.cmroutesp = Si Voie d'administration autre, specifier
 cmPage.cmroutesp.placeHolder = Veuillez spécifier
 cmPage.cmroutesp.errorMessage = Veuillez spécifier la Voie d'administration autre ou corriger la réponse précédente
 cmPage.cmfreq = Fréquence
-cmPage.cmfreqsp = Si Fréquence autre, specifier
+cmPage.cmfreqsp = Si Fréquence autre, spécifier
 cmPage.cmfreqsp.placeHolder = Veuillez spécifier
 cmPage.cmfreqsp.errorMessage = Veuillez spécifier la Fréquence autre ou corriger la réponse précédente
 
