--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -281,7 +281,6 @@ messageErrorNE = This Overall Response does not match with previous evaluation r
 aePage.addAeTitle = Create a form Adverse event
 aePage.aeterm = AE description
 aePage.aeterm.placeHolder = Please specify the AE description
-aePage.aeterm.errorMessage = AE description is mandatory
 aePage.aetermc = AE preferred term
 aePage.aetermc.placeHolder = Please specify the AE preferred term
 aePage.aestdat = Start date
@@ -296,7 +295,6 @@ aePage.aeproc = Was a procedure / non drug  therapy given due to this adverse ev
 aePage.aeother = Was other action taken due to this adverse event?
 aePage.aeothersp = Other action taken, specify
 aePage.aeothersp.placeHolder = Please specify
-aePage.aeothersp.errorMessage = Please specify the Other action taken or correct the previous answer 
 aePage.aeser = Is this a serious Adverse event?
 yes = Yes
 no = No
@@ -308,16 +306,16 @@ aePage.aecong = Congenital anomaly or birth defect
 aePage.aemedim = Important medical event
 aePage.aemedimsp = Important medical event, specify
 aePage.aemedimsp.placeHolder = Please specify
-aePage.aemedimsp.errorMessage = Please specify the reason why this is an Important medical event or correct the previous answer
 messageErrorAeendatBeforAestdat = End Date reported is before Start Date, please correct
-messageErrorAeendatPres =
-messageErrorAeendatMis =
-messageErrorAeotherspMis =
-messageErrorAemedimspMis =
-messageErrorVisitDateAeOut =
-messageErrorAeterm =
-messageErrorVisitDateAeendat =
-messageErrorAaeser =
+messageErrorAeendatPres = End date is not expected following the outcome selected, please correct
+messageErrorAeendatMis = Please specify the End date or correct the previous answer
+messageErrorAeotherspMis = Please specify the Other action taken or correct the previous answer 
+messageErrorAemedimspMis = Please specify the reason why this is an Important medical event or correct the previous answer
+messageErrorAeterm = AE description is mandatory
+messageErrorAestdatFuture = Start date can not be in the future
+messageErrorAeendatFuture = End date can not be in the future
+messageErrorAeMisDate = Please specify the date
+messageErrorAaeser = As this event is reported as serious, at least one seriousness criterion should be Yes
 
 /*--CM--*/
 cmPage.addCmTitle = Create a form Concomitant medication
@@ -350,19 +348,19 @@ cmPage.cmfreqsp.placeHolder = Please specify
 cmPage.cmfreqsp.errorMessage = Please specify the Other frequency or correct the previous answer
 
 /*---ListOfEvents---*/
-eventsPage.ListOfEvents =
-dov.modify =
-ic.modify =
-dm.modify =
-vs.modify =
-te.modify =
-ae.modify =
-cm.modify =
-dov.consult =
-ic.consult =
-dm.consult =
-vs.consult =
-te.consult =
-ae.consult =
-cm.consult =
-event.inactive =
+eventsPage.ListOfEvents = List of Events
+dov.modify = Update DOV
+ic.modify = Update IC
+dm.modify = Update DM
+vs.modify = Update VS
+te.modify = Update TE
+ae.modify = Update AE
+cm.modify = Update CM
+dov.consult = View DOV
+ic.consult = View IC
+dm.consult = View DM
+vs.consult = View VS
+te.consult = View TE
+ae.consult = View AE
+cm.consult = View CM
+event.inactive = Inactivate Event
