--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -60,13 +60,13 @@ role = Le rôle
 listOfPermissionsOf = La liste des permissions
 listOfSites = La liste des sites
 subject =  Le sujet
-ae = Le formulaire Evènement indésirable
+ae = Le formulaire Évènement indésirable
 cm = Le formulaire traitement concomitant
 dov = Le formulaire Date de visite
 ic = Le formulaire Consentement éclairé
 dm = Le formulaire Démographie
 vs = Le formulaire des Signes vitaux
-te = Le formulaire Evaluation tumorale 
+te = Le formulaire Évaluation tumorale 
 add = a bien été créé
 update = a bien été mis à jour
 for = pour le
@@ -260,7 +260,7 @@ messageErrorTempF = La Température n'est pas dans la gamme de valeurs attendues 
 messageErrorOxy = La Saturation en oxygène n'est pas dans la gamme de valeurs attendues
 
 /*---TE---*/
-tePage.addTeTitle = Créer un formulaire d'Evaluation tumorale
+tePage.addTeTitle = Créer un formulaire d'Évaluation tumorale
 tePage.status = L'évaluation tumorale a-t'-elle été réalisée?
 tePage.visitNd = Veuillez spécifier la  raison pour laquelle l'évaluation tumorale n'a pas été réalisée
 tePage.visitNd.placeholder = Veuillez spécifier la  raison pour laquelle l'évaluation tumorale n'a pas été réalisée
@@ -281,7 +281,6 @@ messageErrorNE = La Réponse Globale ne coïncide pas avec les résultats de l'éval
 aePage.addAeTitle = Créer un formulaire d'Evènement indésirable
 aePage.aeterm = Description de l'EI
 aePage.aeterm.placeHolder = Veuillez spécifier la description de l'EI
-aePage.aeterm.errorMessage = La description de l'EI est obligatoire
 aePage.aetermc = Terme préféré EI
 aePage.aetermc.placeHolder = Veuillez spécifier le Terme préféré EI
 aePage.aestdat = Date de début
@@ -296,7 +295,6 @@ aePage.aeproc = Est-ce qu'une procédure / traitement non médicamenteux à été don
 aePage.aeother = Action autre prise suite à cette évènement indésirable
 aePage.aeothersp = Action autre prise, spécifier
 aePage.aeothersp.placeHolder = Veuillez spécifier
-aePage.aeothersp.errorMessage = Veuillez spécifier l'action autre ou corriger la réponse précédente
 aePage.aeser = Est-ce que l'évènement indésirable est considéré comme sérieux ?
 yes = Oui
 no = Non
@@ -308,16 +306,16 @@ aePage.aecong = A entraîné une anomalie congénitale
 aePage.aemedim = Est considéré par le médecin investigateur comme étant médicalement important
 aePage.aemedimsp = Medicalement important, spécifier
 aePage.aemedimsp.placeHolder = Veuillez spécifier
-aePage.aemedimsp.errorMessage = Veuillez spécifier la raison pour laquelle l'évènement est médicalement important ou corriger la réponse précédente
-messageErrorAeendatBeforAestdat =
-messageErrorAeendatPres =
-messageErrorAeendatMis =
-messageErrorAeotherspMis =
-messageErrorAemedimspMis =
-messageErrorVisitDateAeOut =
-messageErrorAeterm =
-messageErrorVisitDateAeendat =
-messageErrorAaeser =
+messageErrorAeendatBeforAestdat = La Date de fin est antérieure à la Date de début, veuillez corriger
+messageErrorAeendatPres = La Date de fin n'est pas attendue d'après l'issue sélectionnée, veuillez corriger
+messageErrorAeendatMis = Veuillez spécifier la Date de fin ou corriger la réponse précédente
+messageErrorAeotherspMis = Veuillez spécifier l'action autre ou corriger la réponse précédente
+messageErrorAemedimspMis = Veuillez spécifier la raison pour laquelle l'évènement est médicalement important ou corriger la réponse précédente
+messageErrorAeterm = La description de l'EI est obligatoire
+messageErrorAestdatFuture = La Date de début ne peut pas être dans le futur
+messageErrorAeendatFuture = La Date de fin ne peut pas être dans le futur
+messageErrorAeMisDate = Veuillez spécifier la date
+messageErrorAaeser = L'évènement étant rapporté comme sérieux, au moins un critère de sévérité doit être répondu Oui
 
 /*--CM--*/
 cmPage.addCmTitle = Créer un formulaire de Traitement concomitant
@@ -350,19 +348,19 @@ cmPage.cmfreqsp.placeHolder = Veuillez spécifier
 cmPage.cmfreqsp.errorMessage = Veuillez spécifier la Fréquence autre ou corriger la réponse précédente
 
 /*---ListOfEvents---*/
-eventsPage.ListOfEvents =
-dov.modify =
-ic.modify =
-dm.modify =
-vs.modify =
-te.modify =
-ae.modify =
-cm.modify =
-dov.consult =
-ic.consult =
-dm.consult =
-vs.consult =
-te.consult =
-ae.consult =
-cm.consult =
-event.inactive =
+eventsPage.ListOfEvents = Liste des évènements
+dov.modify = Mettre à jour DOV
+ic.modify = Mettre à jour IC
+dm.modify = Mettre à jour DM
+vs.modify = Mettre à jour VS
+te.modify = Mettre à jour TE
+ae.modify = Mettre à jour AE
+cm.modify = Mettre à jour CM
+dov.consult = Consulter DOV
+ic.consult = Consulter IC
+dm.consult = Consulter DM
+vs.consult = Consulter VS
+te.consult = Consulter TE
+ae.consult = Consulter AE
+cm.consult = Consulter CM
+event.inactive = Évènement inactivé
