MAJ 05/09 update DOV OK et list of events OK

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -321,7 +321,7 @@ messageErrorAaeser = As this event is reported as serious, at least one seriousn
 cmPage.addCmTitle = Create a form Concomitant medication
 cmPage.cmterm = Medication name
 cmPage.cmterm.placeHolder = Please specify Medication name
-cmPage.cmterm.errorMessage = Medication name is mandatory
+messageErrorCmtermFalse = Medication name is mandatory
 cmPage.cmtermc = CM preferred term
 cmPage.cmtermc.placeHolder = Please specify the CM preferred term
 cmPage.cmstdat = Start date
@@ -346,6 +346,10 @@ cmPage.cmfreq = Frequency
 cmPage.cmfreqsp = If Other frequency, specify
 cmPage.cmfreqsp.placeHolder = Please specify
 cmPage.cmfreqsp.errorMessage = Please specify the Other frequency or correct the previous answer
+messageErrorCmFuture =
+messageErrorCmendat =
+messageErrorCmendatBeforcmstdat =
+messageErrorCmdoseAndCmdosuUnknown =
 
 /*---ListOfEvents---*/
 eventsPage.ListOfEvents = List of Events
@@ -364,3 +368,4 @@ te.consult = View TE
 ae.consult = View AE
 cm.consult = View CM
 event.inactive = Inactivate Event
+
