MAJ 05/09 update DOV OK et list of events OK

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -57,6 +57,7 @@ ConnectionPage.errorMessageLogin = The username cannot be empty and have a minim
 site = The site
 user = The user
 role = The role
+event = The event
 listOfPermissionsOf = The list of permissions
 listOfSites = The list of sites
 subject =  The subject
@@ -69,14 +70,16 @@ vs = The form Vital Signs
 te = The form Tumoral Evaluation
 add = has been created
 update = has been updated
+inactive = has been inactivated
+reactive = has been reactivated
 for = for the
 
 /*---Site---*/
 sitePage.addSiteTitle = Create a site
 sitePage.addSite = Create a site
 sitePage.siteNum = Site number
-sitePage.siteNum.placeHolder = The site number is between 1 and 999999
-sitePage.siteNum.errorMessage = The site number is between 1 and 999999
+sitePage.siteNum.placeHolder = The site number is between 1000 and 9999
+sitePage.siteNum.errorMessage = The site number is between 1000 and 9999
 messageErrorSiteNum = The site number entered already exists in the database
 sitePage.siteName = Site name
 sitePage.siteName.placeHolder = The site name is mandatory and must be at least 2 characters long and contain no digits
@@ -368,4 +371,10 @@ te.consult = View TE
 ae.consult = View AE
 cm.consult = View CM
 event.inactive = Inactivate Event
+event.active = Reactivate Event
 
+/*---Query---*/
+queryPage.addQueryTitle =
+queryPage.text =
+messageErrorInputQueryTextNd =
+application.create.query =
