--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -57,6 +57,7 @@ ConnectionPage.errorMessageLogin = Le nom d'utilisateur ne peut être vide et doi
 site = Le site
 user = L'utilisateur
 role = Le rôle
+event = L'évènement
 listOfPermissionsOf = La liste des permissions
 listOfSites = La liste des sites
 subject =  Le sujet
@@ -69,14 +70,16 @@ vs = Le formulaire des Signes vitaux
 te = Le formulaire Évaluation tumorale 
 add = a bien été créé
 update = a bien été mis à jour
+inactive = a bien été désactivé
+reactive = a bien été réactivé
 for = pour le
 
 /*---Site---*/
 sitePage.addSiteTitle = Créer un site hospitalier
 sitePage.addSite = Créer un site hospitalier
 sitePage.siteNum = Numéro du site hospitalier
-sitePage.siteNum.placeHolder = Le numéro de site hospitalier est compris entre 1 et 999999
-sitePage.siteNum.errorMessage = Le numéro de site hospitalier est compris entre 1 et 999999
+sitePage.siteNum.placeHolder = Le numéro de site hospitalier est compris entre 1000 et 9999
+sitePage.siteNum.errorMessage = Le numéro de site hospitalier est compris entre 1000 et 9999
 messageErrorSiteNum = Le numéro de site hospitalier entré existe déjà dans la base de données
 sitePage.siteName = Nom du site hospitalier
 sitePage.siteName.placeHolder = Le nom du site hospitalier est obligatoire et doit contenir au moins 2 caractères et ne pas contenir de chiffres
@@ -364,3 +367,4 @@ te.consult = Consulter TE
 ae.consult = Consulter AE
 cm.consult = Consulter CM
 event.inactive = Évènement inactivé
+event.active = Réactiver l'évènement
