--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -155,10 +155,10 @@ update.userSitePage = Update the list of sites for a user
 
 /*---Subject---*/
 subjectPage.addSubject = Create a subject 
-subjectPage.subjectNum = Number of the subject 
+subjectPage.subjectNum = Subject Number
 subjectPage.subjectNum.placeholder = Must be between 1 and 999999999
-subjectPage.subjectNum.errorMessage = The number of the subject must be between 1 and 999999999
-messageErrorSubjectNum = The number of the subject already exists in the database 
+subjectPage.subjectNum.errorMessage = The Subject number must be between 1 and 999999999
+messageErrorSubjectNum = The Subject number already exists in the database 
 sitePage.ListOfSubjects.modify = Update the subject
 sitePage.ListOfSubjects = List of subjects
 sitePage.ListOfSubjects.Consult = Consult subject data
@@ -349,10 +349,10 @@ cmPage.cmfreq = Frequency
 cmPage.cmfreqsp = If Other frequency, specify
 cmPage.cmfreqsp.placeHolder = Please specify
 cmPage.cmfreqsp.errorMessage = Please specify the Other frequency or correct the previous answer
-messageErrorCmFuture =
-messageErrorCmendat =
-messageErrorCmendatBeforcmstdat =
-messageErrorCmdoseAndCmdosuUnknown =
+messageErrorCmFuture = Start date can not be in the future
+messageErrorCmendat = End date can not be in the future
+messageErrorCmendatBeforcmstdat = End Date reported is before Start Date, please correct
+messageErrorCmdoseAndCmdosuUnknown = Dose reported is 0 but Dose unit is not Unknown, please correct
 
 /*---ListOfEvents---*/
 eventsPage.ListOfEvents = List of Events
