--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -349,6 +349,10 @@ cmPage.cmfreq = Fréquence
 cmPage.cmfreqsp = Si Fréquence autre, spécifier
 cmPage.cmfreqsp.placeHolder = Veuillez spécifier
 cmPage.cmfreqsp.errorMessage = Veuillez spécifier la Fréquence autre ou corriger la réponse précédente
+messageErrorCmFuture = La Date de début ne peut pas être dans le futur
+messageErrorCmendat = La Date de fin ne peut pas être dans le futur
+messageErrorCmendatBeforcmstdat = La Date de fin est antérieure à la Date de début, veuillez corriger
+messageErrorCmdoseAndCmdosuUnknown = La Dose entrée est 0 mais  l'Unité est différente de Unknown, veuillez corriger
 
 /*---ListOfEvents---*/
 eventsPage.ListOfEvents = Liste des évènements
