MAJ 05/09 update DOV OK et list of events OK

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -72,7 +72,7 @@ add = has been created
 update = has been updated
 inactive = has been inactivated
 reactive = has been reactivated
-for = for the
+for = for
 
 /*---Site---*/
 sitePage.addSiteTitle = Create a site
