--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -72,7 +72,7 @@ add = a bien été créé
 update = a bien été mis à jour
 inactive = a bien été désactivé
 reactive = a bien été réactivé
-for = pour le
+for = pour
 
 /*---Site---*/
 sitePage.addSiteTitle = Créer un site hospitalier
