--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -191,7 +191,7 @@ icPage.visitDate = Date of Consent
 messageErrorIcDate = The date of consent cannot be in the future
 icPage.protocoleVersion = Protocol version 
 icPage.protocoleVersion.placeholder = Must contain the protocol version
-icPage.protocoleVersion.errorMessage = This field is mandatory
+icPage.protocoleVersion.errorMessage = The Protocol version is mandatory
 icPage.status = Subject eligibility 
 eligible = Eligible
 notEligible = Not eligible
