--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -191,7 +191,7 @@ icPage.visitDate = Date du Consentement
 messageErrorIcDate = La date du consentement ne peut pas être dans le futur
 icPage.protocoleVersion = Version du protocole 
 icPage.protocoleVersion.placeholder = Doit contenir la version du protocole
-icPage.protocoleVersion.errorMessage = Ce champ est obligatoire
+icPage.protocoleVersion.errorMessage = La Version du protocole est obligatoire
 icPage.status = Éligibilité du sujet 
 eligible = Éligible
 notEligible = Non éligible
