--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -68,6 +68,7 @@ ic= The form Informed consent
 dm = The form Demography
 vs = The form Vital Signs
 te = The form Tumoral Evaluation
+query = The Query
 add = has been created
 update = has been updated
 inactive = has been inactivated
