--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -67,7 +67,8 @@ dov = Le formulaire Date de visite
 ic = Le formulaire Consentement éclairé
 dm = Le formulaire Démographie
 vs = Le formulaire des Signes vitaux
-te = Le formulaire Évaluation tumorale 
+te = Le formulaire Évaluation tumorale
+query = La requête
 add = a bien été créé
 update = a bien été mis à jour
 inactive = a bien été désactivé
@@ -372,3 +373,9 @@ ae.consult = Consulter AE
 cm.consult = Consulter CM
 event.inactive = Évènement inactivé
 event.active = Réactiver l'évènement
+
+/*---Query---*/
+queryPage.addQueryTitle =
+queryPage.text =
+messageErrorInputQueryTextNd =
+application.create.query =
